kubernetes/sonarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sonarr
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:4.0.19@sha256:82172b363f9eddc02aca544f880a044f2ceb9aaf190bc87e4454e2f705eb91d0
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /shared
          name: shared
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/sh
              - -c
              - apk add ffmpeg
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared
        name: shared
