kubernetes/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sonarr
  labels:
    app: sonarr
  annotations:
    ak-type: basic-auth
    cert-manager.io/cluster-issuer: letsencrypt
    ak-path-exclude: /api/v\d+.*
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Sonarr
    gethomepage.dev/description: TV Manager
    gethomepage.dev/group: Media Automation
    gethomepage.dev/icon: sonarr.png

spec:
  tls:
  - hosts:
    - sonarr.k.oneill.net
    secretName: sonarr-tls
  rules:
  - host: sonarr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
